--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "electron": "^17.1.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "electron": "^17.1.0"
+  },
+  "dependencies": {
+    "tsee": "^1.3.2"
   }
 }
